# duck-game

./: .gitignore  CMakeLists.txt  Makefile  README.md  armor.xcf  config.yaml  precommit.txt
client/: CMakeLists.txt  animation_data_provider.cpp  animation_data_provider.h  camera.cpp  camera.h  client.cpp  client.h  clientProtocol.cpp  clientProtocol.h  client_protocol.cpp  client_protocol.h  client_receiver.cpp  client_receiver.h  client_sender.cpp  client_sender.h  config.h  constant_looper.cpp  constant_looper.h  controls_config.h  duck_controller.cpp  duck_controller.h  joystick_manager.cpp  joystick_manager.h  main.cpp  screen_manager.cpp  screen_manager.h  sound_manager.cpp  sound_manager.h  textures_provider.cpp  textures_provider.h
client/data/server/: lobby.yaml
client/data/sprites/blocks/: blocks_0.yaml  blocks_1.yaml  blocks_2.yaml  blocks_3.yaml  blocks_4.yaml  blocks_5.yaml  blocks_6.yaml  blocks_7.yaml  blocks_8.yaml
client/data/sprites/boxes/: boxes.yaml
client/data/sprites/bullets/: bullets.yaml
client/data/sprites/collectables/: collectables.yaml
client/data/sprites/duck/: duck_0.yaml  duck_1.yaml  duck_2.yaml  duck_3.yaml  frames_0.yaml  frames_1.yaml  frames_2.yaml  frames_3.yaml
client/data/sprites/equipment/: armor.yaml  helmet.yaml
client/data/sprites/feathers/: feathers_0.yaml  feathers_1.yaml  feathers_2.yaml  feathers_3.yaml
client/data/sprites/guns/: guns.yaml
client/data/sprites/wings/: wings_0.yaml  wings_1.yaml  wings_2.yaml  wings_3.yaml
client/lobby/: CMakeLists.txt  lobby.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
client/pre_lobby/: CMakeLists.txt  pre_lobby.h  prelobbymainwindow.cpp  prelobbymainwindow.h  prelobbymainwindow.ui
client/renderables/: animation.cpp  animation.h  armor.cpp  armor.h  block.h  box.cpp  box.h  bullet.cpp  bullet.h  collectable.cpp  collectable.h  duck.cpp  duck.h  equipped_gun.cpp  equipped_gun.h  feathers.cpp  feathers.h  helmet.cpp  helmet.h  map.cpp  map.h  renderable_duck.h  wings.cpp  wings.h
client/sprites/duck/: frames_0.yaml  frames_1.yaml  frames_2.yaml  frames_3.yaml
common/: CMakeLists.txt  blocking_queue.h  commands.h  config.cpp  config.h  liberror.cpp  liberror.h  lobby.h  map.h  map_dto.h  map_loader.cpp  map_loader.h  resolvererror.h  shared_constants.h  snapshot.h  socket.cpp  socket.h  thread.h
docs/: documentacion-tecnica.md  manual-proyecto.md  manual-usuario.md
editor/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
editor/level_editor/: CMakeLists.txt  CMakeLists.txt.user.06d7439  editor_box.cpp  editor_box.h  editor_constants.h  graphic_view_scenario.cpp  graphic_view_scenario.h  main.cpp  main_window.cpp  main_window.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  map_dto.h  resources.qrc
server/: CMakeLists.txt  ServerClient.cpp  ServerClient.h  acceptor.cpp  acceptor.h  aceptador.cpp  aceptador.h  action.h  duck_player.cpp  duck_player.h  entitys_manager.cpp  entitys_manager.h  game.cpp  game.h  game_loop.cpp  game_loop.h  games_monitor.cpp  games_monitor.h  gun_entity.cpp  gun_entity.h  list_monitor.cpp  list_monitor.h  main.cpp  map_collisions.cpp  map_collisions.h  receiver.cpp  receiver.h  sender.cpp  sender.h  server.cpp  server.h  serverProtocol.cpp  serverProtocol.h  server_client.cpp  server_client.h  server_protocol.cpp  server_protocol.h
server/game/: boxes.cpp  boxes.h  bullet_entity.cpp  bullet_entity.h  bullets_manager.cpp  bullets_manager.h  collectables_manager.cpp  collectables_manager.h  collisions.cpp  collisions.h  duck_player.cpp  duck_player.h  entitys_manager.cpp  entitys_manager.h  game_operator.cpp  game_operator.h  gun_entity.cpp  gun_entity.h  gun_types.cpp  gun_types.h  map_collisions.cpp  map_collisions.h  map_loader.cpp  map_loader.h  ticks.h  yaml.cpp  yaml.h
server/game/guns/: ak47.cpp  ak47.h  armor.cpp  armor.h  banana.cpp  banana.h  cowboy_pistol.cpp  cowboy_pistol.h  death_laser.cpp  death_laser.h  dueling_pistol.cpp  dueling_pistol.h  grenade.cpp  grenade.h  helmet.cpp  helmet.h  laser_rifle.cpp  laser_rifle.h  magnum.cpp  magnum.h  pewpew_laser.cpp  pewpew_laser.h  shotgun.cpp  shotgun.h  sniper.cpp  sniper.h
server/maps/: barco_en_proceso.yaml  castle.yaml  cave.yaml  cruce-cumbres.yaml  deathmatch.yaml  escalinatas.yaml  gun-arena.yaml  horizonte-fragmentado.yaml  lobby.yaml  map1.yaml  map2 copy.yaml  map2.yaml  map3.yaml  map6.yaml  mapa.yaml  mapa1.yaml  mapa10.yaml  mapa12.yaml  mapa13.yaml  mapa2.yaml  mapa3.yaml  mapa4.yaml  mapa5.yaml  mapa6.yaml  mapa7.yaml  mapa8.yaml  mapa9.yaml  nexo-cuadruple.yaml  pira.yaml  pirate-ship.yaml  plataformero.yaml  prueba.yaml  swordcube.yaml  yaml.cpp  yaml.h
tests/: CMakeLists.txt  client_protocol_tests.cpp  foo.cpp  server_protocol_tests.cpp  utils.cpp  utils.h
